--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -20,8 +20,8 @@ services:
         limits:
           cpus: ${SKILLNOTES_APP_CPUS}
           memory: ${SKILLNOTES_APP_MEMORY}
-    depends_on:
-      - db
+    # depends_on:
+    #   - db
   db:
     container_name: skillnotes_db
     image: docker.io/postgres:15.10-bookworm
