--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "notes",
+  "name": "skillnotes",
   "version": "1.0.0",
-  "author": "",
+  "author": "Viacheslav Davydov <dv0vd@dv0vd.xyz> (https://dv0vd.xyz)",
   "description": "",
   "keywords": [],
   "main": "index.js",
