--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -7,7 +7,7 @@ services:
     env_file:
       - ./.env
     # command: sh -c 'cd /app && npm run migrate && npm run dev'
-    command: sh -c 'cd /app && npm run migrate && npm run build && npm start'
+    command: sh -c 'cd /app && npm run migrate && npm start'
     networks:
       podman_network:
         aliases:
