--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
-SKILLNOTES_DB_CPUS=1
-SKILLNOTES_DB_MEMORY=128M
+APP_CPUS=1
+APP_MEMORY=128M
 
-SKILLNOTES_APP_CPUS=1
-SKILLNOTES_APP_MEMORY=128M
+BASE_PATH=/
 
-SKILLNOTES_DB_HOST=localhost
-SKILLNOTES_DB_PORT=5432
-SKILLNOTES_DB_NAME=skillnotes
-SKILLNOTES_DB_USER=skillnotes
+DB_CPUS=1
+DB_MEMORY=128M
+
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=skillnotes
+DB_USER=skillnotes
 
 POSTGRES_HOST_AUTH_METHOD=trust
